# CPlusPlus

./: .gitignore  CMakeLists.txt  constexpr_lookup.cpp  globalconfig.cpp  utf_strings.cpp
CMakeObjectLibraryTest/: CMakeLists.txt
CMakeObjectLibraryTest/Client/: CMakeLists.txt  main.cpp
CMakeObjectLibraryTest/DynamicLibrary/: CMakeLists.txt
CMakeObjectLibraryTest/ObjectLibrary/: CMakeLists.txt  FooObject.cpp  FooObject.h
EffectiveC++WithCx11/: EffectiveC++WithCx11.key
EffectiveC++WithCx11/examples/: 01.references.cpp  02.moveconstructor.cpp  03.moveassigment.cpp  04.stdmove.cpp  05.stdforward.cpp  06.movefromconstobj.cpp  07.lvalueparameters.cpp  08.moveonrforwardonuniversal.cpp  09.useconstreforpassbyvalue.cpp  10.useenableif.cpp  11.constexpr.cpp  12.pod.cpp  13.externTemplateFirst.cpp  13.externTemplateSecond.cpp  13.externtemplate.h  14.auto.cpp  15.decltype.cpp  16.declval.cpp  17.alternativefunctionsyntax.cpp  18.lambda.cpp  19.objectconstructionimprovement.cpp  20.stronglytypedenumerations.cpp  21.initializerlist.cpp  22.rangeloop.cpp  23.explicitoverridesandfinal.cpp  24.nullptr.cpp  25.explicitconversionoperators.cpp  26.typeandtemplatealiases.cpp  CMakeLists.txt
FriendlyWithC/: CMakeLists.txt
FriendlyWithC/CppUser/: main.cpp
FriendlyWithC/SDK/include/: Connection.h  Device.h  Factory.h  Object.h
FriendlyWithC/SDK/include/core/: Collection.h  Factory.h  Object.h  Property.h
FriendlyWithC/SDK/include/domain/: Connection.h  Device.h
FriendlyWithC/SDK/include/factory/: ConnectionFactory.h  DeviceFactory.h
FriendlyWithC/SDK/src/: ConcreteConnection.h  ConcreteDevice.cpp  ConcreteDevice.h  ConcreteDeviceFactory.cpp  ConnectionFactory.cpp  DeviceFactory.cpp
boost_signals/: CMakeLists.txt  main.cpp
exporttemplate/: CMakeLists.txt  MyType.cpp  MyType.h  MyType2.h  Pimpl.cpp  Pimpl.h  PimplExtern.h  apitype.h  container  container.cpp  container.h  foo.h  main.cpp  test.cpp
general/: CMakeLists.txt  constexpr.cpp  constexpr_c11_initarray.cpp  constexpr_lookup.cpp  constexpr_static_data_initialization.cpp  function_pointers.cpp  optional.cpp  private_class_visibility.cpp  regex.cpp  utf_strings.cpp  variadic_factorymethod.cpp  variadic_function_call.cpp  variadic_proxy.cpp  variadic_recursive_processing.cpp  variadic_sequential_processing.cpp
globalconfig/: CMakeLists.txt  globalconfig_lib.cpp
multiple_inheritance/: CMakeLists.txt  generic_class_solution.cpp  problem.cpp
