project(cplusplus)
cmake_minimum_required(VERSION 2.8)

set (CMAKE_CXX_STANDARD 14)
add_executable(constexpr constexpr.cpp)
add_executable(constexpr_lookup constexpr_lookup.cpp)
add_executable(constexpr_c11_initarray constexpr_c11_initarray.cpp)
add_executable(utf utf_strings.cpp)
add_executable(variadic_recursive_processing variadic_recursive_processing.cpp)
add_executable(variadic_sequential_processing variadic_sequential_processing.cpp)
add_executable(variadic_function_call variadic_function_call.cpp)
add_executable(variadic_factorymethod variadic_factorymethod.cpp)
add_executable(proxy variadic_proxy.cpp)
add_executable(regex regex.cpp)
add_executable(private_class_visibility private_class_visibility.cpp)