project(ModernCpp)
cmake_minimum_required(VERSION 3.1)

set (CMAKE_CXX_STANDARD 11)
add_executable(01.references 01.references.cpp)
add_executable(02.moveconstructor 02.moveconstructor.cpp)
add_executable(03.moveassigment 03.moveassigment.cpp)
add_executable(04.stdmove 04.stdmove.cpp)
add_executable(05.stdforward 05.stdforward.cpp)
add_executable(06.movefromconstobj 06.movefromconstobj.cpp)
add_executable(07.lvalueparameters 07.lvalueparameters.cpp)
add_executable(08.moveonrforwardonuniversal 08.moveonrforwardonuniversal.cpp)
add_executable(09.useconstreforpassbyvalue 09.useconstreforpassbyvalue.cpp)
add_executable(10.useenableif 10.useenableif.cpp)
add_executable(11.constexpr 11.constexpr.cpp)
add_executable(12.pod 12.pod.cpp)
add_executable(13.externtemplate 13.externtemplate.h 13.externTemplateFirst.cpp 13.externTemplateSecond.cpp)
add_executable(14.auto 14.auto.cpp)
add_executable(15.decltype 15.decltype.cpp)
add_executable(16.declval 16.declval.cpp)
add_executable(17.alternativefunctionsyntax 17.alternativefunctionsyntax.cpp)
add_executable(18.lambda 18.lambda.cpp)
add_executable(19.objectconstructionimprovement 19.objectconstructionimprovement.cpp)
add_executable(20.stronglytypedenumerations 20.stronglytypedenumerations.cpp)
add_executable(21.initializerlist 21.initializerlist.cpp)
add_executable(22.rangeloop 22.rangeloop.cpp)
add_executable(23.explicitoverridesandfinal 23.explicitoverridesandfinal.cpp)
add_executable(24.nullptr 24.nullptr.cpp)
add_executable(25.explicitconversionoperators 25.explicitconversionoperators.cpp)
add_executable(26.typeandtemplatealiases 26.typeandtemplatealiases.cpp)
